fixed container full with row and flex wrap

--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,7 @@ ul li button {
 }
 .detailbook-container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 20px;
@@ -118,6 +117,7 @@ ul li button {
 .container-full {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .header {
   display: flex;
